Loom support for GraalVM.